# calendar-redacter

./: .gitignore  README.md  pyproject.toml
calendar_redacter/: __init__.py  __main__.py  config.py
